--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-3.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-3.yml
@@ -1290,3 +1290,9 @@ notes:
       $$
       g(x) = x^2 + x - 1
       $$
+- id: 1542657018277
+  fields:
+    Front: |
+      CCAC 01.3 63: Suppose $g$ is an even function, and let $h = f \circ g$. Is $h$ always an even function?
+    Back: |
+      Yes.
