--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-5.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-5.yml
@@ -157,3 +157,33 @@ notes:
       )
       ```
       All approach $0$ as $x\rightarrow-\infty$, all pass through $(0,1)$, and all are increasing. The larger the base, the faster the rate of increase.
+- id: 1542728780096
+  tags: [requiresCoding]
+  useMarkdown: pweave
+  fields:
+    Front: |
+      CCAC 01.5 09: Plot the functions below on a common graph. How are they related?
+      $$
+      y = 3^x, \ y = 10^x, \ y = \left(\frac{1}{3}\right)^x, \ y = \left(\frac{1}{10}\right)^x
+      $$
+    Back: |
+      ```{python echo = False}
+      import sympy as sy
+      import matplotlib.pyplot as plt
+
+      plt.rc('text', usetex = True)
+      plt.rc('font', family = 'serif')
+
+      x = sy.symbols('x')
+      p = sy.plot(
+        3**x,
+        10**x,
+        (1/3)**x,
+        (1/10)**x,
+        xlim = (-2, 2),
+        ylim = (0, 5),
+        xlabel = '$x$',
+        ylabel = '$y$',
+      )
+      ```
+      The functions with base greater than $1$ are increasing, and those with base less than $1$ are decreasing. The latter are reflections of the former about the $x$-axis.
