--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-5.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-5.yml
@@ -231,3 +231,36 @@ notes:
         ylabel = '$y$',
       )
       ```
+- id: 1542728780421
+  useMarkdown: pweave
+  fields:
+    Front: |
+      CCAC 01.5 15: Make a rough sketch of the graph of the function $y=1-\frac{1}{2}e^{-x}$. Do not use a calculator. Just use the graphs given in Figures 3 and 13 of CCAC-1.5 and, if necessary, the transformations of CCAC-1.3.
+    Back: |
+      ```{python echo = False}
+      import sympy as sy
+      import matplotlib.pyplot as plt
+
+      plt.rc('text', usetex = True)
+      plt.rc('font', family = 'serif')
+
+      x = sy.symbols('x')
+      p = sy.plot(
+        1-(1/2)*sy.E**(-x),
+        xlim = (-4, 4),
+        ylim = (-3, 2),
+        xlabel = '$x$',
+        ylabel = '$y$',
+        show = False,
+      )
+
+      if hasattr(p, '_backend'):
+        p._backend.close()
+      p._backend = p.backend(p)
+      fg, ax = p._backend.fig, p._backend.ax
+
+      ax.plot(0, (1/2), 'ko', markersize = 4)
+      ax.text(-0.8, (1/2), '$(0,\\frac{1}{2})$')
+
+      p._backend.show()
+      ```
