--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-5.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-5.yml
@@ -264,3 +264,11 @@ notes:
 
       p._backend.show()
       ```
+- id: 1542728780519
+  fields:
+    Front: |
+      CCAC 01.5 17a: Starting with the graph of $y=e^x$, write the equation of the graph that results from shifting 2 units downward.
+    Back: |
+      $$
+      y = e^x - 2
+      $$
