--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-5.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-5.yml
@@ -391,3 +391,11 @@ notes:
       $$
       \sum_{1}^{30}{2^{i-1}} = 2^{30} - 1 = 1,073,741,823
       $$
+- id: 1542728784747
+  fields:
+    Front: |
+      CCAC 01.5 29a: Under ideal conditions a certain bacteria population is known to double every three hours. Suppose that there are initially 100 bacteria. What is the size of the population after 15 hours?
+    Back: |
+      $$
+      3200
+      $$
