--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-6.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-6.yml
@@ -16,3 +16,9 @@ notes:
       CCAC 01.6 01a: What is a one-to-one function?
     Back: |
       A function $f$ is called a **one-to-one function** if $f$ never takes the same value twice; that is, $f(x_1) \ne f(x_2)$ whenever $x_1 \ne x_2$.
+- id: 1542738486247
+  fields:
+    Front: |
+      CCAC 01.6 01b: How can you tell from the graph of a function whether it is one-to-one?
+    Back: |
+      It must pass the Horizontal Line Test.
