--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-6.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-6.yml
@@ -129,3 +129,11 @@ notes:
       CCAC 01.6 19: The formula $C = \frac{5}{9}(F-32)$, where $F \ge -459.67$, expresses the Celsius temperature $C$ as a function of the Fahrenheit temperature $F$. Find a formula for the inverse function, and interpret it. What is the domain of the inverse function?
     Back: |
       $F = \frac{9}{5}C + 32$; the Fahrenheit temperature as a function of the Celsius temperature; $[-273.15, \infty)$.
+- id: 1542738493744
+  fields:
+    Front: |
+      CCAC 01.6 21: Find a formula for the inverse of the function $f(x) = 1 + \sqrt{2 + 3x}$.
+    Back: |
+      $$
+      f^{-1}(x) = \frac{(x-1)^2 - 2}{3}, \ x \ge 1
+      $$
