--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-6.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-6.yml
@@ -190,3 +190,62 @@ notes:
         ylabel = '$y$',
       )
       ```
+- id: 1542738497169
+  tags: [requiresCoding]
+  useMarkdown: pweave
+  fields:
+    Front: |
+      CCAC 01.6 29: Use the graph of $f$ below to sketch the graph of $f^{-1}$.
+      ```{python echo = False}
+      import sympy as sy
+      import matplotlib.pyplot as plt
+
+      with plt.style.context(('ggplot')):
+        plt.rc('text', usetex = True)
+        plt.rc('font', family = 'serif')
+
+        x = sy.symbols('x')
+        p = sy.plot(
+          ((x-3)/2, (x, -1, 1)),
+          (3*x - 4, (x, 1, 2)),
+          (x, (x, 2, 3)),
+          xlim = (-3, 6),
+          ylim = (-2.5, 3.5),
+          xlabel = '$x$',
+          ylabel = '$y$',
+        )
+      ```
+    Back: |
+      ```{python echo = False}
+      import sympy as sy
+      import matplotlib.pyplot as plt
+
+      # Blue: #4A8EBD
+      # Red: #E18276
+      with plt.style.context(('ggplot')):
+        plt.rc('text', usetex = True)
+        plt.rc('font', family = 'serif')
+
+        x = sy.symbols('x')
+        p = sy.plot(
+          ((x-3)/2, (x, -1, 1)),
+          (3*x - 4, (x, 1, 2)),
+          (x, (x, 2, 3)),
+          (2*x + 3, (x, -2, -1)),
+          ((x+4)/3, (x, -1, 2)),
+          (x, (x, 2, 3)),
+          xlim = (-3, 6),
+          ylim = (-2.5, 3.5),
+          xlabel = '$x$',
+          ylabel = '$y$',
+          show = False,
+        )
+        p[0].line_color = '#E18276'
+        p[1].line_color = '#E18276'
+        p[2].line_color = '#E18276'
+        p[3].line_color = '#4A8EBD'
+        p[4].line_color = '#4A8EBD'
+        p[5].line_color = '#4A8EBD'
+        p.show()
+
+      ```
