--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-6.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-6.yml
@@ -292,3 +292,11 @@ notes:
           ylabel = '$y$',
         )
       ```
+- id: 1542738505334
+  fields:
+    Front: |
+      CCAC 01.6 35a: Find the exact value of $\log_{5}{125}$.
+    Back: |
+      $$
+      3
+      $$
