--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-6.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-6.yml
@@ -300,3 +300,11 @@ notes:
       $$
       3
       $$
+- id: 1542738505444
+  fields:
+    Front: |
+      CCAC 01.6 35b: Find the exact value of $\log_{3}\frac{1}{27}$.
+    Back: |
+      $$
+      -3
+      $$
