--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-6.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-6.yml
@@ -390,3 +390,9 @@ notes:
         )
       ```
       All graphs approach $-\infty$ as $x \rightarrow 0^+$, all pass through $(1,0)$, and all are increasing. The larger the base, the slower the rate of increase.
+- id: 1542743255219
+  fields:
+    Front: |
+      CCAC 01.6 45: Suppose that the graph of $y = \log_{2}{x}$ is drawn on a coordinate grid where the unit of measurement is an inch. How many miles to the right of the origin do we have to move before the height of the curve reaches 3 ft?
+    Back: |
+      About 1,084,588 miles.
