--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-6.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-6.yml
@@ -396,3 +396,25 @@ notes:
       CCAC 01.6 45: Suppose that the graph of $y = \log_{2}{x}$ is drawn on a coordinate grid where the unit of measurement is an inch. How many miles to the right of the origin do we have to move before the height of the curve reaches 3 ft?
     Back: |
       About 1,084,588 miles.
+- id: 1542743255369
+  useMarkdown: pweave
+  fields:
+    Front: |
+      CCAC 01.6 47a: Make a rough sketch of the graph of $y = \log_{10}(x + 5)$. Do not use a calculator. Just use the graphs given in Figures 12 and 13 of CCAC 01-6 and, if necessary, the transformations of CCAC 01-3.
+    Back: |
+      ```{python echo = False}
+      import sympy as sy
+      import matplotlib.pyplot as plt
+
+      plt.rc('text', usetex = True)
+      plt.rc('font', family = 'serif')
+
+      x = sy.symbols('x')
+      p = sy.plot(
+        sy.log(x + 5, 10),
+        xlim = (-6, 3),
+        ylim = (-3, 3),
+        xlabel = '$x$',
+        ylabel = '$y$',
+      )
+      ```
