--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-6.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-6.yml
@@ -496,3 +496,32 @@ notes:
     Back: |
       a. $(-\infty, \frac{\ln{3}}{2}]$.
       b. $f^{-1}(x) = \frac{\ln(3 - x^2)}{2}$; $[0, \sqrt{3})$. (Note that the domain of $f^{-1}$ must equal the range of $f$.)
+- id: 1542743261594
+  useMarkdown: pweave
+  fields:
+    Front: |
+      CCAC 01.6 57: Graph the function $f(x) = \sqrt{x^3 + x^2 + x + 1}$ and explain why it is one-to-one. Then use a computer algebra system to find an explicit expression for $f^{-1}(x)$. (Your CAS will produce three possible expressions. Explain why two of them are irrelevant in this context.)
+    Back: |
+      ```{python echo = False}
+      import sympy as sy
+      import matplotlib.pyplot as plt
+
+      plt.rc('text', usetex = True)
+      plt.rc('font', family = 'serif')
+
+      x = sy.symbols('x')
+      p = sy.plot(
+        sy.sqrt(x**3 + x**2 + x + 1),
+        xlim = (-3, 3),
+        ylim = (-1, 3),
+        xlabel = '$x$',
+        ylabel = '$y$',
+      )
+      ```
+      ```{python }
+      import sympy as sy
+
+      x, y = sy.symbols('x y')
+      sy.solve(sy.sqrt(x**3 + x**2 + x + 1) - y, x)
+      ```
+      Two of these solutions are complex-valued functions.
