--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-6.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-6.yml
@@ -534,3 +534,11 @@ notes:
     Back: |
       a. $f^{-1}(n) = 3 \log_{2}{n/100}$; the time elapsed when there are $n$ bacteria.
       b. After about 26.9 hours.
+- id: 1542745816669
+  fields:
+    Front: |
+      CCAC 01.6 61a: Starting with the graph of $y = \ln{x}$, find the equation of the graph that results from shifting 3 units upward.
+    Back: |
+      $$
+      y = \ln{x} + 3
+      $$
